--- a/PatientRecordsModule/Views/NewVisitCreating.xaml
+++ b/PatientRecordsModule/Views/NewVisitCreating.xaml
@@ -9,47 +9,49 @@
              d:DesignHeight="300" d:DesignWidth="300"
              x:Name="confirmationWindow">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Дата/время начала случая:"/>
-        <DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding Date}" />
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Дата/время начала случая:"/>
+            <DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding Date}" SelectedDateFormat="Long" FirstDayOfWeek="Monday" HorizontalAlignment="Left"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
-        <ComboBox Grid.Row="1" Grid.Column="1"  ItemsSource="{Binding VisitTemplates}" SelectedItem="{Binding SelectedVisitTemplate}" SelectedValue="Id" DisplayMemberPath="Name"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
+            <ComboBox Grid.Row="1" Grid.Column="1"  ItemsSource="{Binding VisitTemplates}" SelectedValue="{Binding SelectedVisitTemplateId}" SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Договор:"/>
-        <ComboBox Grid.Row="2" Grid.Column="1"  ItemsSource="{Binding Contracts}" SelectedItem="{Binding SelectedContract}" SelectedValue="Id" DisplayMemberPath="Name"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Договор:"/>
+            <ComboBox Grid.Row="2" Grid.Column="1"  ItemsSource="{Binding Contracts}" SelectedValue="{Binding SelectedContractId}" SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding IsNotSelectedVisitTemplate}"/>
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Источник финансирования:"/>
-        <ComboBox Grid.Row="3" Grid.Column="1"  ItemsSource="{Binding FinancingSources}" SelectedItem="{Binding SelectedFinancingSource}" SelectedValue="Id" DisplayMemberPath="Name"/>
+            <TextBlock Grid.Row="3" Grid.Column="0" Text="Источник финансирования:"/>
+            <ComboBox Grid.Row="3" Grid.Column="1"  ItemsSource="{Binding FinancingSources}" SelectedValue="{Binding SelectedFinancingSourceId}" SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding IsNotSelectedVisitTemplate}"/>
 
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Срочность:"/>
-        <ComboBox Grid.Row="4" Grid.Column="1"  ItemsSource="{Binding Urgentlies}" SelectedItem="{Binding SelectedUrgently}" SelectedValue="Id" DisplayMemberPath="Name"/>
+            <TextBlock Grid.Row="4" Grid.Column="0" Text="Срочность:"/>
+            <ComboBox Grid.Row="4" Grid.Column="1"  ItemsSource="{Binding Urgentlies}" SelectedValue="{Binding SelectedUrgentlyId}" SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding IsNotSelectedVisitTemplate}"/>
 
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Примечание:"/>
-        <TextBox Grid.Row="5" Grid.Column="1" MinLines="2" Width="250" Text="{Binding Note}"/>
+            <TextBlock Grid.Row="5" Grid.Column="0" Text="Примечание:"/>
+            <TextBox Grid.Row="5" Grid.Column="1" Height="48" Text="{Binding Note}" TextWrapping="Wrap"/>
 
-        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Создать" Margin="3" Command="{Binding CreateVisitCommand}">
-                <!--<i:Interaction.Triggers>
-                    <i:EventTrigger EventName="Click">
-                        <ei:CallMethodAction TargetObject="{Binding ElementName=confirmationWindow}" MethodName="Close"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>-->
-            </Button>
-            <Button Content="Отмена" Margin="3" Command="{Binding CancelCommand}"/>
-        </StackPanel>
+            <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Content="Создать" Margin="3" Command="{Binding CreateVisitCommand}"/>
+                <Button Content="Отмена" Margin="3" Command="{Binding CancelCommand}"/>
+            </StackPanel>
+        </Grid>
+        <ContentControl Content="{Binding BusyMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+        <ContentControl Content="{Binding CriticalFailureMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
