--- a/OrganizationContracts/Views/OrgContracts.xaml
+++ b/OrganizationContracts/Views/OrgContracts.xaml
@@ -1,19 +1,26 @@
 ﻿<UserControl x:Class="OrganizationContractsModule.Views.OrgContracts"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:OrganizationContractsModule.ViewModels"
-             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:prism="http://www.codeplex.com/prism"
+             xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
+             xmlns:viewModels="clr-namespace:OrganizationContractsModule.ViewModels"
+             xmlns:views="clr-namespace:OrganizationContractsModule.Views"
+             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              mc:Ignorable="d"
              d:DesignHeight="500"
              d:DesignWidth="800" d:DataContext="{d:DesignInstance viewModels:OrgContractsViewModel}">
 
     <UserControl.Resources>
+        <DataTemplate x:Key="NotificationWindowTemplate">
+            <Grid MinWidth="200" MinHeight="100">
+                <TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding}"/>
+            </Grid>
+        </DataTemplate>
         <converters:Converter x:Key="BooleanToCollapsedConverter" DefaultValue="{x:Static Visibility.Collapsed}">
             <converters:ConverterItem To="{x:Static Visibility.Visible}">
                 <converters:ConverterItem.From>
@@ -39,6 +46,17 @@
             </converters:ConverterItem>
         </converters:Converter>
     </UserControl.Resources>
+
+    <i:Interaction.Triggers>
+        <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmationInteractionRequest, Mode=OneWay}">
+            <popup:PopupWindowAction CenterOverAssociatedObject="True" IsModal="True"
+                                     ContentTemplate="{StaticResource NotificationWindowTemplate}"/>
+        </prism:InteractionRequestTrigger>
+        <prism:InteractionRequestTrigger SourceObject="{Binding NotificationInteractionRequest, Mode=OneWay}">
+            <popup:PopupWindowAction CenterOverAssociatedObject="True" IsModal="True"
+                                     ContentTemplate="{StaticResource NotificationWindowTemplate}"/>
+        </prism:InteractionRequestTrigger>
+    </i:Interaction.Triggers>
     
     <Grid>
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -122,8 +140,8 @@
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
-                        <Label Grid.Row="0" Grid.Column="0" Content="Внутренний номер договора" />
-                        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Number}" Margin="2" MinHeight="25"/>
+                        <Label Grid.Row="0" Grid.Column="0" Content="" />
+                        <Label Grid.Row="0" Grid.Column="1" Content="{Binding Number}" Margin="2" MinHeight="25" FontWeight="Medium"/>
                         <Label Grid.Row="1" Grid.Column="0" Content="Ист. финансирования" />
                         <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding FinSources}" 
                               DisplayMemberPath="Field" 
