--- a/PatientRecordsModule/Views/PersonHierarchicalVisits.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalVisits.xaml
@@ -27,9 +27,9 @@
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}" />
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding DateTimePeriod}" />
 
-                <ContentControl Content="{Binding CriticalFailureMediator}"
+                <!--<ContentControl Content="{Binding CriticalFailureMediator}"
                         HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" />
+                        VerticalAlignment="Stretch" />-->
             </Grid>
         </Border>
     </HierarchicalDataTemplate>
