--- a/PatientRecordsModule/Views/PersonRecordList.xaml
+++ b/PatientRecordsModule/Views/PersonRecordList.xaml
@@ -8,7 +8,7 @@
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
              xmlns:views="clr-namespace:PatientRecordsModule.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="250" d:DesignWidth="250" Width="250">
     <i:Interaction.Triggers>
         <prism:InteractionRequestTrigger SourceObject="{Binding NewVisitCreatingInteractionRequest, Mode=OneWay}">
             <popup:PopupWindowAction IsModal="True">
@@ -17,23 +17,26 @@
                 </popup:PopupWindowAction.WindowContent>
             </popup:PopupWindowAction>
         </prism:InteractionRequestTrigger>
+        <prism:InteractionRequestTrigger SourceObject="{Binding NewVisitCreatingInteractionRequest, Mode=OneWay}">
+            <prism:PopupWindowAction IsModal="True"/>
+        </prism:InteractionRequestTrigger>
     </i:Interaction.Triggers>
     <Grid>
         <Grid.ColumnDefinitions >
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition  Height="auto"/>
             <RowDefinition  Height="*"/>
         </Grid.RowDefinitions>
 
-        <ToggleButton Grid.Column="0" Grid.Row="0" Background="White">
+        <ToggleButton Grid.Column="0" Grid.Row="0" Background="White" HorizontalAlignment="Stretch">
             <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
                 <Image  HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="pack://application:,,,/Core;component/Resources/Images/AmbCard48x48.png" />
                 <TextBlock VerticalAlignment="Center" Text="{Binding AmbNumber}"/>
             </StackPanel>
         </ToggleButton>
-        <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="1" Width="250">
+        <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch">
             <TreeView ItemsSource="{Binding RootItems, Mode=TwoWay}" HorizontalContentAlignment="Stretch">
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type TreeViewItem}">
